# cashCollection-A2A

./: .dockerignore  .env.example  .gitignore  DESIGN.md  Dockerfile  Makefile  README.md  app.py  crm.py  mcp_server.py  models.py  pyproject.toml
a2a/: __init__.py  agent_card.py  task_handler.py
crew/: email_crew.py  tone_rubric.py
evaluation/: scorers.py
routes/: a2a.py  draft.py  system.py
tests/: conftest.py  test_api.py  test_crm.py  test_output_parsers.py  test_scorers.py
